# veldra

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
config/: beta-policy.toml  demo-open-policy.toml  demo-showcase-policy.toml  demo-strict-policy.toml  policy.regtest.toml
docs/: README.md  beta-runbook.md  beta-scenario-1.md
scripts/: clear-verdicts.sh  demo-auto.sh  dev-bitcoin-cli.sh  dev-demo-phases.sh  dev-regtest.sh  dev-stratum.sh  dev-traffic.sh
services/: README.md
services/pool-verifier/: Cargo.toml  hello.sh  policy.toml
services/pool-verifier/src/: main.rs  mempool_client.rs  policy.rs  state.rs
services/rg-protocol/: Cargo.toml
services/rg-protocol/src/: lib.rs
services/sv2-bridge/: Cargo.toml
services/sv2-bridge/src/: main.rs
services/template-manager/: Cargo.toml  manager.toml  manager_stratum.toml
services/template-manager/src/: config.rs  main.rs
