[package]
name = "pool-verifier"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "time", "io-util", "sync"] }
toml = "0.8"
axum = "0.7"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
anyhow = "1"
rg-protocol = { path = "../rg-protocol" }

[[bin]]
name = "pool-verifier"
path = "src/main.rs"

[[bin]]
name = "init-policy"
path = "src/bin/init_policy.rs"

[lib]
path = "src/lib.rs"