[package]
name = "template-manager"
version = "0.1.1"
edition = "2024"
rust-version = "1.92"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
anyhow = "1"
rg-protocol = { path = "../rg-protocol" }
bitcoincore-rpc = "0.18"
toml = "0.8"
axum = "0.7"

