[package]
name = "template-manager"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "time", "io-util", "sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
anyhow = "1"
rg-protocol = { path = "../rg-protocol" }
bitcoincore-rpc = "0.18"
toml = "0.8"
axum = "0.7"
async-trait = "0.1"
